--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -19,22 +19,61 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
-        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="65" FontSize="48"/>
 
+        <!-- Coluna 0 -->
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="0" Grid.Row="3" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+
+        <!-- Coluna 1 -->
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" Grid.Row="2" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" Grid.Row="3" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+
+        <!-- Coluna 2 -->
+        <TextBlock Grid.Column="2" Grid.Row="0" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" Grid.Row="1" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" Grid.Row="2" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" Grid.Row="3" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+
+        <!-- Coluna 3 -->
+        <TextBlock Grid.Column="3" Grid.Row="0" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" Grid.Row="1" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" Grid.Row="2" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" Grid.Row="3" Text="?" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   MouseDown="TextBlock_MouseDown"/>
     </Grid>
 </Window>
